# fractalwonder

./: .gitignore  .markdownlint.json  .mcp.json  ARBITRARY_PRECISION_IMPLEMENTATION_PLAN.md  CLAUDE.md  Cargo.toml  Cargo.toml.backup  NEXT_SESSION_START_HERE.md  README.md  RENDERER-ARCHITECTURE.md  Trunk.toml  debug_hdr  eslint.config.js  fractalwonder-compute.js  fractalwonder-compute_bg.wasm  fractalwonder-ui-26fac9d4d6503d93.js  fractalwonder-ui-26fac9d4d6503d93_bg.wasm  fractalwonder-ui-60a6cbde3499f8a4.js  fractalwonder-ui-60a6cbde3499f8a4_bg.wasm  fractalwonder-ui-6ee7b218bd750e19.js  fractalwonder-ui-6ee7b218bd750e19_bg.wasm  fractalwonder-ui-f6e072eba2d31534.js  fractalwonder-ui-f6e072eba2d31534_bg.wasm  index.html  input-2af05ca6b53a20a3.css  input-59a4004cb811fef.css  input-7b8b80fd38efa149.css  input-b624b8ed5f65a6af.css  input.css  package.json  tailwind.config.js  vite.config.ts
.beads/: fractalwonder.db
.claude/: CLAUDE.md  settings.json  settings.local.json  settings.local.jsonc
.cursor/rules/: PRIME-DIRECTIVE.mdc  coding.mdc  debugging.mdc  design.mdc  ears.mdc  execute.mdc  plan.mdc  testing.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
_ai/: DESIGN.md  PROJECT.md  REQUIREMENTS.md  STORY-001-project-setup.md  user-interaction-plan.md
_ai/example-src/: App.tsx  main.tsx
_archive/tests/: arbitrary_precision.rs
assets/: factory_palettes.json
docs/: 2025-11-16-new-ideas.md  DESIGN.md  PROJECT.md  RENDERER-ARCHITECTURE.md  REQUIREMENTS.md  architecture-redesign.md  architecture.md  deep-zoom-centre-tile-bug.md  pixel-image-coords-idea.md  precision_bits.md  roadmap.md  separate_coloring.md
docs/architecture/: workspace-structure.md
docs/archive/: 2025-01-20-dynamic-precision-design.md  2025-01-21-extreme-precision-mandelbrot-implementation.md  2025-01-25-async-progressive-renderer-design.md  2025-01-25-async-progressive-renderer-impl.md  2025-01-27-multi-reference-implementation.md  2025-10-18-pluggable-renderer-architecture.md  2025-10-19-robust-coordinate-types.md  2025-10-20-mandelbrot-renderer.md  (+35 more)
fractalwonder-compute/: Cargo.toml
fractalwonder-compute/src/: adaptive_mandelbrot_renderer.rs  app_data_renderer.rs  atomics.rs  bla.rs  cancellation.rs  lib.rs  mandelbrot.rs  messages.rs  perturbation.rs  pixel_renderer.rs  precision.rs  render_config.rs  renderer.rs  renderer_factory.rs  renderer_info.rs  renderer_trait.rs  shared_buffer.rs  test_image.rs  tile_render.rs  worker.rs  worker_messages.rs
fractalwonder-compute/src/computers/: mandelbrot.rs  mod.rs  test_image.rs
fractalwonder-compute/src/perturbation/: mod.rs  pixel.rs  pixel_f64_bla.rs  pixel_hdr_bla.rs  reference_orbit.rs  tile.rs
fractalwonder-compute/src/perturbation/tests/: arbitrary_precision.rs  basic_perturbation.rs  bla.rs  deep_zoom_center_tile.rs  deep_zoom_diagnostic.rs  generic_types.rs  glitch_detection.rs  grid.rs  helpers.rs  mod.rs  reference_orbit.rs  tile.rs
fractalwonder-compute/tests/: worker_integration.rs
fractalwonder-core/: Cargo.toml
fractalwonder-core/src/: app_data.rs  bigfloat.rs  complex_delta.rs  compute_data.rs  config.rs  floatexp.rs  hdrcomplex.rs  hdrfloat.rs  lib.rs  messages.rs  numeric.rs  pixel_rect.rs  points.rs  precision.rs  transforms.rs  viewport.rs
fractalwonder-core/tests/: bigfloat_arithmetic.rs  bigfloat_comparison.rs  bigfloat_construction.rs  bigfloat_conversion.rs  bigfloat_serialization.rs  hdrfloat.rs  hdrfloat_deep_zoom.rs  hdrfloat_extended_arithmetic.rs
fractalwonder-gpu/: Cargo.toml
fractalwonder-gpu/src/: bla_upload.rs  buffers.rs  constants.rs  device.rs  direct_pipeline.rs  direct_renderer.rs  error.rs  lib.rs  pass.rs  perturbation_floatexp_pipeline.rs  perturbation_floatexp_renderer.rs  perturbation_hdr_pipeline.rs  perturbation_hdr_renderer.rs  pipeline.rs  progressive_pipeline.rs  progressive_renderer.rs  renderer.rs  stretch.rs  tests.rs
fractalwonder-gpu/src/shaders/: delta_iteration.wgsl  delta_iteration_floatexp.wgsl  delta_iteration_hdr.wgsl  direct_floatexp.wgsl  floatexp.wgsl  hdrfloat.wgsl  perturbation.wgsl  progressive_iteration.wgsl
fractalwonder-gpu/tests/: bla_gpu_test.rs  cpu_gpu_comparison.rs
fractalwonder-ui/: Cargo.toml
fractalwonder-ui/src/: app.rs  config.rs  lib.rs
fractalwonder-ui/src/components/: circular_progress.rs  collapsible_section.rs  confirm_dialog.rs  curve_editor.rs  fullscreen_button.rs  gradient_editor.rs  home_button.rs  info_button.rs  info_menu.rs  interactive_canvas.rs  lighting_control.rs  lighting_slider.rs  menu.rs  menu_items.rs  mod.rs  options_menu.rs  palette_editor.rs  palette_editor_state.rs  palette_menu.rs  test_canvas.rs  toast.rs  ui.rs  ui_panel.rs
fractalwonder-ui/src/hooks/: fullscreen.rs  mod.rs  persistence.rs  ui_visibility.rs  use_canvas_interaction.rs
fractalwonder-ui/src/rendering/: adam7.rs  async_progressive_renderer.rs  canvas_renderer.rs  canvas_utils.rs  colorizers.rs  message_parallel_renderer.rs  mod.rs  parallel_canvas_renderer.rs  parallel_renderer.rs  parallel_renderer_tests.rs  presentation_config.rs  render_progress.rs  test_pattern.rs  tile_size.rs  tiles.rs  tiling_canvas_renderer.rs
fractalwonder-ui/src/rendering/colorizers/: color_space.rs  colorizer.rs  curve.rs  gradient.rs  lighting_params.rs  mandelbrot.rs  mod.rs  palette.rs  palette_lut.rs  pipeline.rs  presets.rs  render_settings.rs  settings.rs  shading.rs  smooth_iteration.rs  test_image.rs
fractalwonder-ui/src/state/: app_state.rs  mod.rs
fractalwonder-ui/src/workers/: message_worker_pool.rs  mod.rs  quadtree.rs  render_worker_pool.rs  worker_pool.rs  worker_pool_glitch.rs  worker_pool_types.rs
fractalwonder-ui/src/workers/perturbation/: coordinator.rs  glitch_resolution.rs  helpers.rs  mod.rs
public/: compute-worker.js  message-compute-worker.js
scripts/: claude  decode_url.py  launch-chrome.sh  run-all-checks.sh
src/: app.rs  lib.rs
tests/: arbitrary_precision.rs
worker-pkg/: fractalwonder_compute.d.ts  fractalwonder_compute.js  fractalwonder_compute_bg.wasm  fractalwonder_compute_bg.wasm.d.ts
(+283 files in other folders)
