[package]
name = "fractalwonder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"
leptos-use = "0.13"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "MouseEvent",
  "EventTarget",
  "CssStyleDeclaration",
  "Element",
  "HtmlElement",
  "PointerEvent",
  "WheelEvent",
  "Performance",
  "console",
  "AddEventListenerOptions",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

