[workspace]
members = [
    "fractalwonder-ui",
    "fractalwonder-compute",
    "fractalwonder-core",
]
resolver = "2"

[workspace.dependencies]
# Shared core crate
fractalwonder-core = { path = "./fractalwonder-core" }
fractalwonder-compute = { path = "./fractalwonder-compute" }

# Arbitrary precision
dashu = "0.4"
dashu-float = "0.4"

# WASM/JS bindings
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
console_error_panic_hook = "0.1"
console_log = "1.0"
dyn-clone = "1.0.20"

# Testing
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
