[workspace]
members = [
    "fractalwonder-core",
    "fractalwonder-compute",
    "fractalwonder-ui",
    "fractalwonder-gpu",
]
resolver = "2"

[workspace.dependencies]
# Core crates
fractalwonder-core = { path = "./fractalwonder-core" }
fractalwonder-compute = { path = "./fractalwonder-compute" }

# Arbitrary precision
dashu = "0.4"
dashu-base = "0.4"
dashu-float = "0.4"

# Leptos framework
leptos = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }
leptos-use = "0.13"

# WASM/JS bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Compression and encoding (for URL hash persistence)
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
base64 = "0.22"

# Utilities
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"

# Testing
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
