[package]
name = "fractalwonder-compute"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fractalwonder-core = { path = "../fractalwonder-core" }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "console",
    "DedicatedWorkerGlobalScope",
    "MessageEvent",
] }
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = { workspace = true }
