[package]
name = "fractalwonder-core"
version = "0.1.0"
edition = "2021"

[dependencies]
dashu = { workspace = true }
dashu-base = { workspace = true }
dashu-float = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
