[package]
name = "fractalwonder-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "23.0"
bytemuck = { version = "1.14", features = ["derive"] }
futures-channel = "0.3"
log = "0.4"
thiserror = "1.0"
fractalwonder-core = { path = "../fractalwonder-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Performance"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster = "0.4"

[dev-dependencies]
fractalwonder-compute = { path = "../fractalwonder-compute" }
