[package]
name = "fractalwonder-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fractalwonder-core = { workspace = true }
fractalwonder-compute = { workspace = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos-use = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "AddEventListenerOptions",
    "CanvasRenderingContext2d",
    "ContextAttributes2d",
    "Document",
    "DomRect",
    "Element",
    "Event",
    "HtmlCanvasElement",
    "ImageData",
    "MouseEvent",
    "Performance",
    "PointerEvent",
    "WheelEvent",
    "Window",
] }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
