[package]
name = "fractalwonder-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fractalwonder-core = { workspace = true }
fractalwonder-compute = { workspace = true }
fractalwonder-gpu = { workspace = true }
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos-use = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "AddEventListenerOptions",
    "CanvasRenderingContext2d",
    "ContextAttributes2d",
    "Document",
    "DomRect",
    "Element",
    "ErrorEvent",
    "Event",
    "HashChangeEvent",
    "Headers",
    "History",
    "HtmlCanvasElement",
    "ImageData",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Performance",
    "PointerEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Storage",
    "Url",
    "WheelEvent",
    "Window",
    "Worker",
    "WorkerOptions",
    "WorkerType",
] }
flate2 = { workspace = true }
js-sys = { workspace = true }
base64 = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
